      $XDG_DATA_HOME
    * Warnings about HTTP content-type being unexpected now properly display
    * Make the proxy parameter also affect https connections
    * Add a --clean argument on the run command to reduce the database size
    * Set body element attribute dir=auto in HTML mail
    * Store the lock file in XDG_RUNTIME_DIR instead of /tmp

v3.12.3 (2021-03-19)
    * Make dependency on feedparser have an upper bound so that `pip install`
      works again

v3.12.2 (2020-08-31)
    * Fix bug `AttributeError: 'NoneType' object has no attribute 'close'` (#126)

v3.12.1 (2020-08-02)
    * Fix calling opmlexport without arguments

v3.12 (2020-08-02)
    * Drop support for EOL Python 3.4, add support for Python 3.8
    * Add List_ID and List_Post headers to the generated emails
    * Add a new `reply-changes` setting
    * Improve configurability of text wrapping for the emails
    * Use `platform.node()` instead of "dev.null.invalid" in "Message-ID" header
    * Improve locking support for when multiple rss2email instances are run in parallel
    * Fix handling of __VERSION__ and __URL__ in user-agent strings
    * Fix opmlexport

v3.11 (2019-10-26)
    * Add new `user-agent` attribute for configuring email User-Agent

v3.10 (2019-09-01)
    * Catch and warn for invalid Content-Types
    * Add a manually extracted list of config options to r2e.1
    * Add a redirect post-process module
    * Follow symlinks of datafiles
    * Add zsh completion
    * Add support for maildir
    * Fix `r2e new` overwriting an existing config
    * Add new `feed-name` and `feed-url` attributes for the `name-format` setting
    * Change logging format
    * Allow multiple SMTP recipients
    * Fix SMTP security issues
    * Fix test suite
    * Drop support for Python 3.2 and 3.3
    * Remove `__contributors__` from the `rss2email` module
    * Stop using deprecated `html2text.unescape`
    * Fix locking issues when data file is on NFS