@@ -98,6 +98,10 @@ def run(*args, **kwargs):
     add_parser.add_argument(
         'email', nargs='?',
         help='target email for the new feed')
+    add_parser.add_argument(
+        '--only-new', dest='only_new',
+        default=False, action='store_const', const=True,
+        help="entries in the feed now will be not sent")
 
     run_parser = subparsers.add_parser(
         'run', help=_command.run.__doc__.splitlines()[0])
